# CV_HW

./: .gitignore
Hausaufgabe_1/: CMakeLists.txt
Hausaufgabe_1/src/: apple.cpp  armor.cpp  plates.cpp
Hausaufgabe_2/: CMakeLists.txt
Hausaufgabe_2/src/: calibrate.cpp  camera.cpp  video.cpp
Hausaufgabe_3/: CMakeLists.txt  main.cpp  solvePNP.cpp
Hausaufgabe_3/kalman/: kalman.h
